--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body,
+html {
+  font-family: "Roboto", sans-serif; // Use your chosen font family
+  font-size: 16px; // Set a base font size if needed
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
