--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div>
-  <app-sidebar />
+<div class="app-layout">
+  <app-sidebar *ngIf="router.url !== '/login'"></app-sidebar>
+
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
-<router-outlet />
