- changed password field to be password type

--- a/Frontend/src/app/features/login/login.component.html
+++ b/Frontend/src/app/features/login/login.component.html
@@ -12,7 +12,7 @@
     />
 
     <input
-      type="text"
+      type="password"
       id="password"
       [(ngModel)]="password"
       name="password"
