Fix minor typos

--- a/Frontend/src/app/features/login/login.component.html
+++ b/Frontend/src/app/features/login/login.component.html
@@ -20,8 +20,8 @@
       placeholder="Password"
     />
 
-    <div *ngIf="isRegistering" class="'admin-checkbox">
-      <input type="checkbox" id="admin" [(ngModel)]="isAdmin" name="" isAdmin />
+    <div *ngIf="isRegistering" class="admin-checkbox">
+      <input type="checkbox" id="admin" [(ngModel)]="isAdmin" name="isAdmin" />
       <label for="admin">Admin</label>
     </div>
 
