--- a/Frontend/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/Frontend/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,29 +1,34 @@
 .sidebar {
   width: 200px;
-  background-color: #f8f9fa;
-  height: 100vh; // Full height of the viewport
+  background-color: #007bff;
+  height: 100%;
   padding: 20px;
 
   ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
 
     li {
       margin-bottom: 10px;
       cursor: pointer;
+      width: 100%;
+      display: block;
       padding: 10px;
+      box-sizing: border-box;
+
       &:hover {
-        background-color: #e2e6ea;
-        a {
-          color: #007bff;
-        }
+        background-color: #43a0fd;
       }
 
       a {
+        text-align: center;
         text-decoration: none;
-        color: #000;
+        color: #ffffff;
         font-size: 18px;
         display: block;
+        width: 100%;
+        height: 100%;
       }
     }
   }
