--- a/Frontend/src/app/features/products/components/product-filter/product-filter.component.scss
+++ b/Frontend/src/app/features/products/components/product-filter/product-filter.component.scss
@@ -40,6 +40,11 @@
       background-repeat: no-repeat;
       background-position: right 1rem center;
       padding-right: 2rem;
+      font-size: 16px;
+      box-sizing: border-box;
+      white-space: nowrap; // Prevents the text from wrapping inside the select element
+      overflow: hidden;
+      padding: 8px;
     }
   }
 
