--- a/Frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/Frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -2,6 +2,7 @@
   <ul>
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/products">Products</a></li>
+    <li><a routerLink="/edit">Edit Products</a></li>
     <li><a routerLink="/online-users">Online Users</a></li>
   </ul>
 </div>
