--- a/Frontend/src/app/shared/components/products/product-card/product-card.component.html
+++ b/Frontend/src/app/shared/components/products/product-card/product-card.component.html
@@ -4,5 +4,5 @@
   <p><label>Price:</label> ₪{{ price }}</p>
   <p><label>Stock:</label> {{ stock }}</p>
   <p><label>Category:</label> {{ category }}</p>
-  <button *ngIf="isAdmin" (click)="onDelete()">Delete</button>
+  <button *ngIf="getIsAdmin() && deletable" (click)="onDelete()">Delete</button>
 </div>
