Had to stop in the middle. Working on a generic product list component

--- a/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
+++ b/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
@@ -1,1 +1,8 @@
-<p>product-edit works!</p>
+<div class="page-container">
+  <app-product-list
+    [products]="products"
+    [categoryMap]="categoryMap"
+    [isDeletable]="true"
+    (deleteProduct)="onDeleteProduct($event)"
+  ></app-product-list>
+</div>
