made product list reusable. Added delete button in the edit page

--- a/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
+++ b/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
@@ -1,8 +1,10 @@
 <div class="page-container">
-  <app-product-list
-    [products]="products"
-    [categoryMap]="categoryMap"
-    [isDeletable]="true"
-    (deleteProduct)="onDeleteProduct($event)"
-  ></app-product-list>
+  <div class="products-section">
+    <app-product-list
+      [products]="products"
+      [categoryMap]="categoryMap"
+      [isDeletable]="true"
+      (deleteProduct)="onDeleteProduct($event)"
+    ></app-product-list>
+  </div>
 </div>
