--- a/Frontend/src/app/features/products/components/product-view-page/product-view-page.component.html
+++ b/Frontend/src/app/features/products/components/product-view-page/product-view-page.component.html
@@ -6,9 +6,11 @@
     ></app-product-filter>
   </div>
 
-  <app-product-list
-    [products]="products"
-    [categoryMap]="categoryMap"
-    [isDeletable]="false"
-  ></app-product-list>
+  <div class="products-section">
+    <app-product-list
+      [products]="products"
+      [categoryMap]="categoryMap"
+      [isDeletable]="false"
+    ></app-product-list>
+  </div>
 </div>
