--- a/Frontend/src/app/shared/components/products/product-card/product-card.component.html
+++ b/Frontend/src/app/shared/components/products/product-card/product-card.component.html
@@ -1,10 +1,12 @@
 <div class="product-card">
-  <h3>{{ name }}</h3>
-  <p><label>Description:</label> {{ description }}</p>
-  <p><label>Price:</label> ₪{{ price }}</p>
-  <p><label>Stock:</label> {{ stock }}</p>
-  <p><label>Category:</label> {{ category }}</p>
-  <button *ngIf="getIsAdmin() && isDeletable" (click)="onDelete()">
-    Delete
-  </button>
+  <div class="delete-section">
+    <button *ngIf="getIsAdmin() && isDeletable" (click)="onDelete()">X</button>
+  </div>
+  <div class="details-section">
+    <h3>{{ name }}</h3>
+    <p><label>Description:</label> {{ description }}</p>
+    <p><label>Price:</label> ₪{{ price }}</p>
+    <p><label>Stock:</label> {{ stock }}</p>
+    <p><label>Category:</label> {{ category }}</p>
+  </div>
 </div>
