--- a/Frontend/src/app/features/products/components/product-filter/product-filter.component.scss
+++ b/Frontend/src/app/features/products/components/product-filter/product-filter.component.scss
@@ -1,8 +1,8 @@
 .filter-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   margin: 1rem 0;
   padding: 1rem;
   background-color: #f5f5f5;
@@ -26,7 +26,7 @@
       padding: 0.75rem;
       border: 1px solid #ccc;
       border-radius: 3px;
-      width: 80%;
+      width: 60%;
       font-size: 1rem;
       transition: border-color 0.2s ease-in-out;
 
@@ -40,6 +40,7 @@
       background-repeat: no-repeat;
       background-position: right 1rem center;
       padding-right: 2rem;
+      width: 150px;
       font-size: 16px;
       box-sizing: border-box;
       white-space: nowrap;
