--- a/Frontend/src/app/features/products/components/product-view-page/product-view-page.component.scss
+++ b/Frontend/src/app/features/products/components/product-view-page/product-view-page.component.scss
@@ -1,7 +1,7 @@
 .page-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   padding: 20px;
 
   .filter-section {
@@ -10,8 +10,7 @@
     margin-bottom: 20px;
   }
 
-  .product-list {
+  .products-section {
     width: 100%;
-    align-self: flex-start;
   }
 }
