--- a/Frontend/src/app/shared/components/products/product-card/product-card.component.scss
+++ b/Frontend/src/app/shared/components/products/product-card/product-card.component.scss
@@ -1,12 +1,14 @@
 .product-card {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   width: 100%;
   background-color: #fff;
   border: 1px solid #e0e0e0;
   padding: 15px;
   margin-bottom: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
-
-  h3 {
+  flex h3 {
     margin: 0;
     font-size: 1.2rem;
     color: #333;
@@ -19,5 +21,23 @@
 
   label {
     font-weight: bold;
+  }
+
+  .details-section {
+    margin-left: 10px;
+  }
+
+  .delete-section {
+    button {
+      border: none;
+      color: #fff;
+      background: #007bff;
+      cursor: pointer;
+      border-radius: 4px;
+
+      &:hover {
+        background-color: #43a0fd;
+      }
+    }
   }
 }
