--- a/Frontend/src/app/features/products/components/product-add/product-add.component.html
+++ b/Frontend/src/app/features/products/components/product-add/product-add.component.html
@@ -1,76 +1,94 @@
 <div class="page-container">
-  <h3>Create Product</h3>
-  <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <input
-        id="name"
-        formControlName="name"
-        type="text"
-        placeholder="Product name"
-      />
-      <div *ngIf="getForm['name'].touched && getForm['name'].valid">
-        <small *ngIf="getForm['name'].errors?.['required']"
-          >Name is required</small
-        >
-        <small *ngIf="getForm['name'].errors?.['minLength']"
-          >Name must be at least 2 characters long</small
-        >
+  <div class="form-header">
+    <h3>Create Product</h3>
+  </div>
+  <div class="form-section">
+    <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
+      <div class="form-body">
+        <div class="form-group">
+          <input
+            class="app-input"
+            id="name"
+            formControlName="name"
+            type="text"
+            placeholder="Product name"
+          />
+          <div *ngIf="getForm['name'].touched && getForm['name'].valid">
+            <small *ngIf="getForm['name'].errors?.['required']"
+              >Name is required</small
+            >
+            <small *ngIf="getForm['name'].errors?.['minLength']"
+              >Name must be at least 2 characters long</small
+            >
+          </div>
+        </div>
+
+        <div class="form-group">
+          <textarea
+            class="app-input"
+            id="description"
+            formControlName="description"
+            placeholder="Product description"
+          ></textarea>
+        </div>
+
+        <div class="form-group">
+          <input
+            class="app-input"
+            id="price"
+            formControlName="price"
+            type="text"
+            placeholder="Product price"
+          />
+          <div *ngIf="getForm['price'].touched && getForm['price'].valid">
+            <small *ngIf="getForm['price'].errors?.['required']"
+              >Price is required</small
+            >
+            <small *ngIf="getForm['price'].errors?.['pattern']"
+              >Please enter a valid price</small
+            >
+          </div>
+        </div>
+
+        <div class="form-group">
+          <input
+            class="app-input"
+            id="stock"
+            formControlName="stock"
+            type="text"
+            placeholder="Stock count"
+          />
+          <div *ngIf="getForm['stock'].touched && getForm['stock'].valid">
+            <small *ngIf="getForm['stock'].errors?.['required']"
+              >stock can only be a whole number</small
+            >
+          </div>
+        </div>
+
+        <div class="form-group">
+          <select class="app-input" id="category" formControlName="category">
+            <option value="0">All</option>
+            <option *ngFor="let category of categories" [value]="category.id">
+              {{ category.name }}
+            </option>
+          </select>
+          <div *ngIf="getForm['category'].touched && getForm['category'].valid">
+            <small *ngIf="getForm['category'].errors?.['required']"
+              >Category is required.</small
+            >
+          </div>
+        </div>
       </div>
-    </div>
 
-    <div class="form-group">
-      <textarea
-        id="description"
-        formControlName="description"
-        placeholder="Product description"
-      ></textarea>
-    </div>
-
-    <div class="form-group">
-      <input
-        id="price"
-        formControlName="price"
-        type="text"
-        placeholder="Product price"
-      />
-      <div *ngIf="getForm['price'].touched && getForm['price'].valid">
-        <small *ngIf="getForm['price'].errors?.['required']"
-          >Price is required</small
+      <div class="form-footer">
+        <button
+          class="app-button"
+          type="submit"
+          [disabled]="productForm.invalid"
         >
-        <small *ngIf="getForm['price'].errors?.['pattern']"
-          >Please enter a valid price</small
-        >
+          Submit
+        </button>
       </div>
-    </div>
-
-    <div class="form-group">
-      <input
-        id="stock"
-        formControlName="stock"
-        type="text"
-        placeholder="Stock count"
-      />
-      <div *ngIf="getForm['stock'].touched && getForm['stock'].valid">
-        <small *ngIf="getForm['stock'].errors?.['required']"
-          >stock can only be a whole number</small
-        >
-      </div>
-    </div>
-
-    <div class="form-group">
-      <select id="category" formControlName="category">
-        <option value="0">All</option>
-        <option *ngFor="let category of categories" [value]="category.id">
-          {{ category.name }}
-        </option>
-      </select>
-      <div *ngIf="getForm['category'].touched && getForm['category'].valid">
-        <small *ngIf="getForm['category'].errors?.['required']"
-          >Category is required.</small
-        >
-      </div>
-    </div>
-
-    <button type="submit" [disabled]="productForm.invalid">Submit</button>
-  </form>
+    </form>
+  </div>
 </div>
