--- a/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
+++ b/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
@@ -1,8 +1,14 @@
 <div class="page-container">
   <div class="controls-section">
-    <button (click)="displayDeleteProductsList()">Delete Products</button>
-    <button (click)="displayAddProductsForm()">Add Products</button>
-    <button (click)="displayAddCategoriesForm()">Add Category</button>
+    <button class="app-button" (click)="displayDeleteProductsList()">
+      Delete Products
+    </button>
+    <button class="app-button" (click)="displayAddProductsForm()">
+      Add Products
+    </button>
+    <button class="app-button" (click)="displayAddCategoriesForm()">
+      Add Category
+    </button>
   </div>
   <div *ngIf="isDeleteProductsVisible" class="products-list">
     <app-product-list
