--- a/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.scss
+++ b/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.scss
@@ -5,25 +5,17 @@
   justify-content: flex-start;
 
   .controls-section {
-    background-color: #f5f5f5;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
     margin: 1rem 0;
     padding: 1rem;
+    background-color: #f5f5f5;
     border-radius: 5px;
-    width: 100%;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     button {
       margin-right: 10px;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 3px;
-      cursor: pointer;
-      background-color: #007bff;
-      color: white;
-      font-weight: bold;
-
-      &:hover {
-        background-color: #43a0fd;
-      }
     }
   }
 }
