--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -8,3 +8,36 @@ html {
   padding: 0;
   box-sizing: border-box;
 }
+
+.app-button {
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  font-weight: bold;
+  transition: background-color 0.2s ease-in-out;
+
+  &:hover {
+    background-color: #43a0fd;
+  }
+
+  &:disabled {
+    cursor: default;
+    background-color: #9fcdff;
+  }
+}
+
+.app-input {
+  padding: 0.75rem;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  width: 60%;
+  font-size: 1rem;
+
+  &:focus {
+    outline: none;
+    border-color: #007bff;
+  }
+}
