Did some more styling

--- a/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
+++ b/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
@@ -10,20 +10,22 @@
       Add Category
     </button>
   </div>
-  <div *ngIf="isDeleteProductsVisible" class="products-list">
-    <app-product-list
-      [products]="products"
-      [categoryMap]="categoryMap"
-      [isDeletable]="true"
-      (deleteProduct)="onDeleteProduct($event)"
-    ></app-product-list>
-  </div>
+  <div class="displayed-form">
+    <div *ngIf="isDeleteProductsVisible" class="products-list">
+      <app-product-list
+        [products]="products"
+        [categoryMap]="categoryMap"
+        [isDeletable]="true"
+        (deleteProduct)="onDeleteProduct($event)"
+      ></app-product-list>
+    </div>
 
-  <div *ngIf="isAddProductsVisible">
-    <app-product-add></app-product-add>
-  </div>
+    <div *ngIf="isAddProductsVisible">
+      <app-product-add></app-product-add>
+    </div>
 
-  <div *ngIf="isAddCategoryVisible">
-    <app-category-add></app-category-add>
+    <div *ngIf="isAddCategoryVisible">
+      <app-category-add></app-category-add>
+    </div>
   </div>
 </div>
