--- a/Frontend/src/app/features/products/components/category-add/category-add.component.html
+++ b/Frontend/src/app/features/products/components/category-add/category-add.component.html
@@ -3,6 +3,7 @@
   <form [formGroup]="categoryForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <input
+        class="app-input"
         id="name"
         formControlName="name"
         type="text"
@@ -14,6 +15,8 @@
         >
       </div>
     </div>
-    <button type="submit" [disabled]="categoryForm.invalid">Submit</button>
+    <button class="app-button" type="submit" [disabled]="categoryForm.invalid">
+      Submit
+    </button>
   </form>
 </div>
