--- a/Frontend/src/app/features/products/components/category-add/category-add.component.scss
+++ b/Frontend/src/app/features/products/components/category-add/category-add.component.scss
@@ -1,4 +1,13 @@
 .page-container {
   display: flex;
   flex-direction: column;
+  padding: 8px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  align-items: center;
+
+  .form-group {
+    margin: 10px;
+  }
 }
