--- a/Frontend/src/app/features/products/components/product-add/product-add.component.scss
+++ b/Frontend/src/app/features/products/components/product-add/product-add.component.scss
@@ -1,20 +1,26 @@
 .page-container {
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: 8px;
   background-color: #f5f5f5;
   border-radius: 5px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  align-items: center;
 
   .form-header {
     align-self: center;
   }
 
-  .form-section {
-    align-self: center;
+  .form-group {
+    margin: 10px;
   }
 
   textarea {
     resize: none;
+    height: 100px;
+  }
+
+  button {
+    align-self: center;
   }
 }
