--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -18,6 +18,7 @@ html {
   color: white;
   font-weight: bold;
   transition: background-color 0.2s ease-in-out;
+  align-self: center;
 
   &:hover {
     background-color: #43a0fd;
@@ -33,7 +34,6 @@ html {
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 3px;
-  width: 60%;
   font-size: 1rem;
 
   &:focus {
