Product and category creation now work

--- a/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
+++ b/Frontend/src/app/features/products/components/product-edit-page/product-edit-page.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <div *ngIf="isAddProductsVisible">
-      <app-product-add></app-product-add>
+      <app-product-add [categories]="categories"></app-product-add>
     </div>
 
     <div *ngIf="isAddCategoryVisible">
