--- a/Frontend/src/app/features/products/components/product-add/product-add.component.html
+++ b/Frontend/src/app/features/products/components/product-add/product-add.component.html
@@ -37,7 +37,7 @@
             class="app-input"
             id="price"
             formControlName="price"
-            type="text"
+            type="number"
             placeholder="Product price"
           />
           <div *ngIf="getForm['price'].touched && getForm['price'].valid">
@@ -55,7 +55,7 @@
             class="app-input"
             id="stock"
             formControlName="stock"
-            type="text"
+            type="number"
             placeholder="Stock count"
           />
           <div *ngIf="getForm['stock'].touched && getForm['stock'].valid">
@@ -66,14 +66,15 @@
         </div>
 
         <div class="form-group">
-          <select class="app-input" id="category" formControlName="category">
-            <option value="0">All</option>
+          <select class="app-input" id="category" formControlName="categoryId">
             <option *ngFor="let category of categories" [value]="category.id">
               {{ category.name }}
             </option>
           </select>
-          <div *ngIf="getForm['category'].touched && getForm['category'].valid">
-            <small *ngIf="getForm['category'].errors?.['required']"
+          <div
+            *ngIf="getForm['categoryId'].touched && getForm['categoryId'].valid"
+          >
+            <small *ngIf="getForm['categoryId'].errors?.['required']"
               >Category is required.</small
             >
           </div>
