Logging in works

--- a/Frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/Frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
   <ul>
-    <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/products">Products</a></li>
     <li><a routerLink="/edit">Edit Products</a></li>
     <li><a routerLink="/online-users">Online Users</a></li>
+    <li><Button>Logout</Button></li>
   </ul>
 </div>
