--- a/Frontend/src/app/features/login/login.component.html
+++ b/Frontend/src/app/features/login/login.component.html
@@ -3,6 +3,7 @@
     <h2>{{ isRegistering ? "Register" : "Login" }}</h2>
 
     <input
+      class="app-input"
       type="text"
       id="username"
       [(ngModel)]="username"
@@ -12,6 +13,7 @@
     />
 
     <input
+      class="app-input"
       type="password"
       id="password"
       [(ngModel)]="password"
@@ -30,6 +32,8 @@
       (clicked)="toggleRegister()"
     ></app-link-button>
 
-    <button type="submit">{{ isRegistering ? "Register" : "Login" }}</button>
+    <button type="submit" class="app-button">
+      {{ isRegistering ? "Register" : "Login" }}
+    </button>
   </form>
 </div>
