--- a/Frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/Frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,6 +3,6 @@
     <li><a routerLink="/products">Products</a></li>
     <li><a routerLink="/edit">Edit Products</a></li>
     <li><a routerLink="/online-users">Online Users</a></li>
-    <li><Button>Logout</Button></li>
+    <li><Button (click)="logout()">Logout</Button></li>
   </ul>
 </div>
