--- a/Frontend/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/Frontend/src/app/shared/components/sidebar/sidebar.component.scss
@@ -30,6 +30,18 @@
         width: 100%;
         height: 100%;
       }
+
+      button {
+        background-color: transparent;
+        border: transparent;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        text-decoration: none;
+        color: #ffffff;
+        font-size: 18px;
+        display: block;
+      }
     }
   }
 }
