Fixed deletion and presenting username

--- a/Frontend/src/app/shared/components/products/product-list/product-list.component.html
+++ b/Frontend/src/app/shared/components/products/product-list/product-list.component.html
@@ -1,5 +1,6 @@
 <div class="product-list" *ngFor="let product of products">
   <app-product-card
+    [productId]="product.id"
     [name]="product.name"
     [description]="product.description"
     [price]="product.price"
