--- a/Frontend/src/app/shared/components/sidebar/sidebar.component.html
+++ b/Frontend/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,4 +1,8 @@
 <div class="sidebar">
+  <div class="user-details">
+    <h2>{{ getUsername() }}</h2>
+  </div>
+
   <ul>
     <li><a routerLink="/products">Products</a></li>
     <li><a routerLink="/edit">Edit Products</a></li>
