--- a/Frontend/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/Frontend/src/app/shared/components/sidebar/sidebar.component.scss
@@ -3,6 +3,20 @@
   background-color: #007bff;
   height: 100%;
   padding: 20px;
+  align-items: center;
+
+  .user-details {
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+
+    h2 {
+      align-items: center;
+      color: #fff;
+      text-align: center; // Center the header text
+      margin-top: 20px; // Move the header a bit down from the top of the sidebar
+      user-select: none;
+      cursor: default;
+    }
+  }
 
   ul {
     list-style-type: none;
